Get multiyear month avgs for vodca

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -392,7 +392,30 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import xarray as xr"
+                "import xarray as xr\n",
+                "\n",
+                "\n",
+                "def daily_to_multiyear_monthly(\n",
+                "    ds: xr.Dataset, band_name: str, out_name: str, p_dir: str\n",
+                ") -> None:\n",
+                "    \"\"\"Converts daily data to multiyear monthly data and saves to disk\"\"\"\n",
+                "    ds = ds.drop_vars([\"sensor_flag\", \"processing_flag\"])\n",
+                "    ds = ds.rename({\"vod\": band_name})\n",
+                "    ds_05 = (\n",
+                "        ds.coarsen(lon=2, lat=2, boundary=\"exact\")\n",
+                "        .mean()\n",
+                "        .resample(time=\"1MS\")\n",
+                "        .mean()\n",
+                "        .groupby(\"time.month\")\n",
+                "        .mean(\"time\")\n",
+                "    )\n",
+                "    ds_05.attrs[\"geospatiallatresolution\"] = \"0.5 degree\"\n",
+                "    ds_05.attrs[\"geospatiallonresolution\"] = \"0.5 degree\"\n",
+                "\n",
+                "    ds_025 = ds.resample(time=\"1MS\").mean().groupby(\"time.month\").mean(\"time\")\n",
+                "\n",
+                "    ds_05.to_netcdf(f\"{p_dir}/0.5_deg/{out_name}_multiyear_monthly_0.5_deg.nc\")\n",
+                "    ds_025.to_netcdf(f\"{p_dir}/0.25_deg/{out_name}_multiyear_monthly_0.25_deg.nc\")"
             ]
         },
         {
@@ -406,18 +429,14 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "cf812d08",
+            "id": "8b1cb17c",
             "metadata": {},
             "outputs": [],
             "source": [
                 "c_band = xr.open_mfdataset(\n",
-                "    \"./data/vodca/C-Band/200*/*.nc\", parallel=True, chunks={\"time\": 15}\n",
+                "    \"./data/vodca/source/C-Band/200*/*.nc\", engine=\"h5netcdf\", parallel=True, chunks={\"time\": 15}\n",
                 ")\n",
-                "c_band = c_band.drop_vars([\"sensor_flag\", \"processing_flag\"])\n",
-                "c_band = c_band.rename({\"vod\": \"c_band\"})\n",
-                "c_band.coarsen(lon=2, lat=2, boundary=\"exact\").mean().resample(\n",
-                "    time=\"1MS\"\n",
-                ").mean().to_netcdf(\"./data/vodca/C-Band/2002-2004_monthly_0.5_deg.nc\")"
+                "daily_to_multiyear_monthly(c_band, \"c_band\", \"C_2002-2004\", \"./data/vodca\")"
             ]
         },
         {
@@ -425,7 +444,7 @@
             "id": "7276ed53",
             "metadata": {},
             "source": [
-                "## Ku-band (2000-2002)"
+                "## Ku-band (2000-2004)"
             ]
         },
         {
@@ -436,13 +455,9 @@
             "outputs": [],
             "source": [
                 "ku_band = xr.open_mfdataset(\n",
-                "    \"./data/vodca/Ku-band/200*/*.nc\", parallel=True, chunks={\"time\": 15}\n",
+                "    \"./data/vodca/source/Ku-band/200*/*.nc\", engine=\"h5netcdf\", parallel=True, chunks={\"time\": 15}\n",
                 ")\n",
-                "ku_band = ku_band.drop_vars([\"sensor_flag\", \"processing_flag\"])\n",
-                "ku_band = ku_band.rename({\"vod\": \"c_band\"})\n",
-                "ku_band.coarsen(lon=2, lat=2, boundary=\"exact\").mean().resample(\n",
-                "    time=\"1MS\"\n",
-                ").mean().to_netcdf(\"./data/vodca/Ku-band/2000-2002_monthly_0.5_deg.nc\")"
+                "daily_to_multiyear_monthly(ku_band, \"ku_band\", \"Ku_2000-2004\", \"./data/vodca\")"
             ]
         },
         {
@@ -450,7 +465,7 @@
             "id": "9ada5ed0",
             "metadata": {},
             "source": [
-                "## X-band (2000-2002)"
+                "## X-band (2000-2004)"
             ]
         },
         {
@@ -461,16 +476,12 @@
             "outputs": [],
             "source": [
                 "x_band = xr.open_mfdataset(\n",
-                "    \"./data/vodca/X-band/200*/*.nc\",\n",
+                "    \"./data/vodca/source/X-band/200*/*.nc\",\n",
                 "    engine=\"h5netcdf\",\n",
                 "    parallel=True,\n",
                 "    chunks={\"time\": 15},\n",
                 ")\n",
-                "x_band = x_band.drop_vars([\"sensor_flag\", \"processing_flag\"])\n",
-                "x_band = x_band.rename({\"vod\": \"c_band\"})\n",
-                "x_band.coarsen(lon=2, lat=2, boundary=\"exact\").mean().resample(\n",
-                "    time=\"1MS\"\n",
-                ").mean().to_netcdf(\"./data/vodca/X-band/2000-2002_monthly_0.5_deg.nc\")"
+                "daily_to_multiyear_monthly(x_band, \"x_band\", \"X_2000-2004\", \"./data/vodca\")"
             ]
         }
     ],
