incorporate new GBIF and sPlot multiband maps

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -32,6 +32,7 @@
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.geodata import drop_XY_NAs\n",
     "from utils.visualize import plot_splits\n",
+    "import utils.datasets as datasets\n",
     "from utils.datasets import DataCollection, Dataset, MLCollection, CollectionName\n",
     "from utils.dataset_tools import Unit, FileExt\n",
     "from pathlib import Path\n",
@@ -85,17 +86,24 @@
     "inat_gbif = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
-    "    parent_dir=Path(\"./iNaturalist_traits/maps_GBIF/traitmaps/TRY_gap_filled/\"),\n",
     "    collection_name=CollectionName.INAT_GBIF,\n",
     "    # filter_outliers=config.training_config.filter_y_outliers,\n",
+    ")\n",
+    "\n",
+    "gbif = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    collection_name=CollectionName.GBIF,\n",
+    "    band=datasets.GBIFBand.MEAN,\n",
+    "    file_ext=FileExt.GRID\n",
     ")\n",
     "\n",
     "splot = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
-    "    parent_dir=config.splot_dir,\n",
     "    collection_name=CollectionName.SPLOT,\n",
-    "    transform=\"exp_ln\"\n",
+    "    band=datasets.GBIFBand.MEAN,\n",
+    "    file_ext=FileExt.GRID\n",
     ")\n",
     "\n",
     "wc = Dataset(\n",
