--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -27,18 +27,14 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import glob\n",
                 "import os\n",
                 "\n",
-                "import ee\n",
                 "import rioxarray as riox\n",
                 "import utils.geodata as geodata\n",
-                "import utils.gdal as gdal\n",
                 "from PreprocessingConfig import PreprocessingConfig\n",
-                "from tqdm.notebook import tqdm\n",
                 "from utils.datasets import Dataset, Unit, resample_dataset, CollectionName\n",
                 "\n",
-                "from utils.visualize import plot_traits, plot_rasterio\n",
+                "from utils.visualize import plot_traits\n",
                 "\n",
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
@@ -431,7 +427,10 @@
             "outputs": [],
             "source": [
                 "c_band = xr.open_mfdataset(\n",
-                "    \"./data/vodca/source/C-Band/200*/*.nc\", engine=\"h5netcdf\", parallel=True, chunks={\"time\": 15}\n",
+                "    \"./data/vodca/source/C-Band/200*/*.nc\",\n",
+                "    engine=\"h5netcdf\",\n",
+                "    parallel=True,\n",
+                "    chunks={\"time\": 15},\n",
                 ")\n",
                 "daily_to_multiyear_monthly(c_band, \"c_band\", \"C_2002-2004\", \"./data/vodca\")"
             ]
@@ -452,7 +451,10 @@
             "outputs": [],
             "source": [
                 "ku_band = xr.open_mfdataset(\n",
-                "    \"./data/vodca/source/Ku-band/200*/*.nc\", engine=\"h5netcdf\", parallel=True, chunks={\"time\": 15}\n",
+                "    \"./data/vodca/source/Ku-band/200*/*.nc\",\n",
+                "    engine=\"h5netcdf\",\n",
+                "    parallel=True,\n",
+                "    chunks={\"time\": 15},\n",
                 ")\n",
                 "daily_to_multiyear_monthly(ku_band, \"ku_band\", \"Ku_2000-2004\", \"./data/vodca\")"
             ]
