testing and debugging of new masked and imputed datasets

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -295,6 +295,8 @@
    "outputs": [],
    "source": [
     "results = pd.read_csv(\"results/training_results.csv\")\n",
+    "training_id = \"2023-07-12_17-39-29\"\n",
+    "results = results.loc[(results[\"Run ID\"] == training_id)]\n",
     "params = results[\"Best parameters\"]\n",
     "params = [ast.literal_eval(p) for p in params if p is not np.nan]"
    ]
@@ -341,7 +343,7 @@
     "    axs[row, col].set_title(f\"Distribution of {name}\")\n",
     "\n",
     "    # add text with quartile values\n",
-    "    axs[row, col].text(0.95, 0.95, f\"Q1: {q1:.2f}\\nMed: {median:.2f}\\nQ3: {q3:.2f}\",\n",
+    "    axs[row, col].text(0.95, 0.95, f\"Q1: {q1:.3f}\\nMed: {median:.3f}\\nQ3: {q3:.3f}\",\n",
     "                        transform=axs[row, col].transAxes, ha=\"right\", va=\"top\")\n",
     "\n",
     "    # add sample density along right axis\n",
@@ -468,6 +470,60 @@
     "        y_test=y_test,\n",
     "        verbose=1,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.datasets import GBIFBand\n",
+    "import geopandas as gpd\n",
+    "from utils.datasets import Dataset, DataCollection, MLCollection, CollectionName\n",
+    "from TrainModelConfig import TrainModelConfig\n",
+    "from utils.dataset_tools import Unit, FileExt\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "gbif = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    collection_name=CollectionName.GBIF,\n",
+    "    band=GBIFBand.MEAN,\n",
+    "    file_ext=FileExt.GRID,\n",
+    ")\n",
+    "\n",
+    "Y = DataCollection([gbif])\n",
+    "\n",
+    "# Prep X data\n",
+    "df_fn = \"./data/collections/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=all_imputed.feather\"\n",
+    "df = gpd.read_feather(df_fn)\n",
+    "X = DataCollection.from_df(df)\n",
+    "\n",
+    "# Convert to MLCollection for training\n",
+    "XY = MLCollection(X, Y)\n",
+    "XY.drop_NAs(verbose=1)\n",
+    "\n",
+    "print(\"X datasets:\")\n",
+    "for dataset in XY.X.datasets:\n",
+    "    print(dataset.collection_name)\n",
+    "\n",
+    "print(\"Y datasets:\")\n",
+    "for dataset in XY.Y.datasets:\n",
+    "    print(dataset.collection_name)\n",
+    "\n",
+    "config = TrainModelConfig(debug=True)\n",
+    "config.training_config.filter_y_outliers = None\n",
+    "config.training_config.cv_n_groups = 10\n",
+    "config.training_config.nan_strategy = \"all\"\n",
+    "\n",
+    "XY.train_Y_models(\n",
+    "    training_config=config.training_config,\n",
+    "    y_idx=[0],\n",
+    "    tune_params=False,\n",
+    ")"
    ]
   }
  ],
