--- a/3-ModelAssessment.ipynb
+++ b/3-ModelAssessment.ipynb
@@ -23,8 +23,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utils.geostats import aoa\n",
-    "from utils.models import Model\n",
+    "from utils.models import TrainedSet\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -59,7 +58,7 @@
    "source": [
     "# Load a model\n",
     "results_df = pd.read_csv(\"./results/training_results.csv\").copy()\n",
-    "training_id = \"2023-07-12_17-39-29\"\n",
+    "training_id = \"2023-07-21_17-01-49\"\n",
     "results = results_df.loc[(results_df[\"Run ID\"] == training_id)].sort_values(by=\"Test r-squared\", ascending=False)"
    ]
   },
@@ -77,7 +76,14 @@
    "outputs": [],
    "source": [
     "row = results.iloc[0]\n",
-    "model = Model.from_results_row(row)"
+    "trained = TrainedSet.from_results_row(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load unseen predictor data"
    ]
   },
   {
@@ -86,23 +92,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = model.model.predict(model.X_test)\n",
-    "obs = model.y_test\n",
+    "import os\n",
+    "import geopandas as gpd\n",
+    "from utils.models import Prediction\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "new_df_fn = os.path.join(\"data/collections\", row[\"collection\"])\n",
+    "new_df = gpd.read_feather(new_df_fn)\n",
     "\n",
+    "new_df_imputed_fn = \"data/collections/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=all_imputed.feather\"\n",
+    "new_df_imputed = gpd.read_feather(new_df_imputed_fn)\n",
     "\n",
-    "# plot the observed vs. predicted values using seaborn\n",
-    "sns.set_theme()\n",
-    "sns.set_style(\"whitegrid\")\n",
-    "sns.set_context(\"paper\")\n",
-    "\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "p1 = min(min(pred), min(obs))\n",
-    "p2 = max(max(pred), max(obs))\n",
-    "ax.plot([p1, p2], [p1, p2], color=\"black\", lw=0.5)\n",
-    "ax.scatter(pred, obs)\n"
+    "pred = Prediction(trained, new_df, new_df_imputed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create new dataframe with predictions, masked according to the Area of Applicability (may take a while for AoA calculation)"
    ]
   },
   {
@@ -111,9 +118,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.datasets import GBIFBand\n",
-    "\n",
-    "[b.readable for b in GBIFBand]"
+    "d = {\"trait\": pred.predictions}\n",
+    "predictions_df = gpd.GeoDataFrame(d, geometry=new_df.geometry, crs=new_df.crs, index=new_df.index)\n",
+    "predictions_df[\"masked_aoa\"] = predictions_df[\"trait\"].where(pred.aoa.df[\"AOA\"] == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CV Coefficient of Variation"
    ]
   }
  ],
