--- a/3-ModelAssessment.ipynb
+++ b/3-ModelAssessment.ipynb
@@ -129,6 +129,47 @@
    "source": [
     "# CV Coefficient of Variation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ToDo:\n",
+    "1. Confirm that CV estimators are being saved\n",
+    "2. Run predictions with full dataset for each model\n",
+    "3. Calculate the CoV across the predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a model\n",
+    "results_df = pd.read_csv(\"./results/test/test-training_results.csv\").copy()\n",
+    "row = results_df.sort_values(by=\"Run ID\").iloc[-1]\n",
+    "trained = TrainedSet.from_results_row(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "from utils.models import Prediction\n",
+    "\n",
+    "new_df_fn = row[\"collection\"]\n",
+    "new_df = gpd.read_feather(new_df_fn)\n",
+    "\n",
+    "new_df_imputed_fn = \"data/collections/MOD09GA.061_ISRIC_soil_WC_BIO_VODCA_0.5_deg_nan-strat=all_imputed.feather\"\n",
+    "new_df_imputed = gpd.read_feather(new_df_imputed_fn)\n",
+    "\n",
+    "pred = Prediction(trained, new_df, new_df_imputed)\n",
+    "pred.df"
+   ]
   }
  ],
  "metadata": {
