WIP: handling large datasets

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -129,15 +129,13 @@
             "outputs": [],
             "source": [
                 "wc = Dataset(\n",
-                "    res=0.5,\n",
-                "    unit=Unit.DEGREE,\n",
-                "    parent_dir=config.WC_dir,\n",
+                "    res=30,\n",
+                "    unit=Unit.SECOND,\n",
                 "    collection_name=config.WC_name,\n",
                 "    # bio_ids=config.WC_bio_ids,\n",
                 ")\n",
                 "\n",
-                "if config.resamp_to_disk:\n",
-                "    resample_dataset(dataset=wc, resolution=2, unit=Unit.DEGREE)"
+                "resample_dataset(dataset=wc, resolution=0.01, unit=Unit.DEGREE)"
             ]
         },
         {
@@ -299,13 +297,13 @@
             "outputs": [],
             "source": [
                 "modis = Dataset(\n",
-                "    res=0.5,\n",
-                "    unit=Unit.DEGREE,\n",
+                "    res=1,\n",
+                "    unit=Unit.KILOMETER,\n",
                 "    collection_name=CollectionName.MODIS,\n",
                 ")\n",
                 "\n",
                 "# Uncomment to resample the MODIS dataset to another resolution\n",
-                "# resample_dataset(dataset=modis, resolution=2, unit=Unit.DEGREE)"
+                "resample_dataset(dataset=modis, resolution=0.01, unit=Unit.DEGREE)"
             ]
         },
         {
@@ -353,13 +351,13 @@
             "outputs": [],
             "source": [
                 "soil = Dataset(\n",
-                "    res=0.5,\n",
-                "    unit=Unit.DEGREE,\n",
+                "    res=1,\n",
+                "    unit=Unit.KILOMETER,\n",
                 "    collection_name=config.soil_name,\n",
                 ")\n",
                 "\n",
                 "# Uncomment to resample the ISRIC dataset to another resolution\n",
-                "# resample_dataset(dataset=soil, resolution=2, unit=Unit.DEGREE)"
+                "resample_dataset(dataset=soil, resolution=0.01, unit=Unit.DEGREE)"
             ]
         },
         {
@@ -386,7 +384,8 @@
             "outputs": [],
             "source": [
                 "import xarray as xr\n",
-                "\n",
+                "import numpy as np\n",
+                "import geopandas as gpd\n",
                 "\n",
                 "def daily_to_multiyear_monthly(\n",
                 "    ds: xr.Dataset, band_name: str, out_name: str, p_dir: str\n",
@@ -394,21 +393,41 @@
                 "    \"\"\"Converts daily data to multiyear monthly data and saves to disk\"\"\"\n",
                 "    ds = ds.drop_vars([\"sensor_flag\", \"processing_flag\"])\n",
                 "    ds = ds.rename({\"vod\": band_name})\n",
-                "    ds_05 = (\n",
-                "        ds.coarsen(lon=2, lat=2, boundary=\"exact\")\n",
-                "        .mean()\n",
-                "        .resample(time=\"1MS\")\n",
-                "        .mean()\n",
-                "        .groupby(\"time.month\")\n",
-                "        .mean(\"time\")\n",
-                "    )\n",
-                "    ds_05.attrs[\"geospatiallatresolution\"] = \"0.5 degree\"\n",
-                "    ds_05.attrs[\"geospatiallonresolution\"] = \"0.5 degree\"\n",
+                "\n",
+                "\n",
+                "    # ds_05 = (\n",
+                "    #     ds.coarsen(lon=2, lat=2, boundary=\"exact\")\n",
+                "    #     .mean()\n",
+                "    #     .resample(time=\"1MS\")\n",
+                "    #     .mean()\n",
+                "    #     .groupby(\"time.month\")\n",
+                "    #     .mean(\"time\")\n",
+                "    # )\n",
+                "    # ds_05.attrs[\"geospatiallatresolution\"] = \"0.5 degree\"\n",
+                "    # ds_05.attrs[\"geospatiallonresolution\"] = \"0.5 degree\"\n",
                 "\n",
                 "    ds_025 = ds.resample(time=\"1MS\").mean().groupby(\"time.month\").mean(\"time\")\n",
+                "    ds_025 = ds_025.rename({\"lat\": \"y\", \"lon\": \"x\"})\n",
+                "    \n",
+                "    target_grid = xr.open_dataarray(\"data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.tif\", masked=True)\n",
                 "\n",
-                "    ds_05.to_netcdf(f\"{p_dir}/0.5_deg/{out_name}_multiyear_monthly_0.5_deg.nc\")\n",
-                "    ds_025.to_netcdf(f\"{p_dir}/0.25_deg/{out_name}_multiyear_monthly_0.25_deg.nc\")"
+                "    # Interpolate to a 0.01 degree grid\n",
+                "    # ds_001 = ds_025.interp(\n",
+                "    #     lon=np.arange(-180, 180, 0.01), lat=np.arange(-90, 90, 0.01), method=\"cubic\"\n",
+                "    # )\n",
+                "\n",
+                "    # Match modis target_grid and using rioxarray's reproject_match\n",
+                "    # Make sure the dataset has the same CRS as the target grid\n",
+                "    ds_025.rio.write_crs(target_grid.rio.crs, inplace=True)\n",
+                "    # ds_025 = ds_025.rio.interpolate_na(method=\"cubic\")\n",
+                "    ds_001 = ds_025.rio.reproject_match(target_grid, resampling=2)  # 4 = lanczos\n",
+                "\n",
+                "    ds_001.attrs[\"geospatiallatresolution\"] = \"0.01 degree\"\n",
+                "    ds_001.attrs[\"geospatiallonresolution\"] = \"0.01 degree\"\n",
+                "\n",
+                "    # ds_05.to_netcdf(f\"{p_dir}/0.5_deg/{out_name}_multiyear_monthly_0.5_deg.nc\")\n",
+                "    # ds_025.to_netcdf(f\"{p_dir}/0.25_deg/{out_name}_multiyear_monthly_0.25_deg.nc\")\n",
+                "    ds_001.to_netcdf(f\"{p_dir}/0.01_deg/{out_name}_multiyear_monthly_0.01_deg.nc\")"
             ]
         },
         {
@@ -426,12 +445,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "import xarray as xr\n",
+                "\n",
                 "c_band = xr.open_mfdataset(\n",
                 "    \"./data/vodca/source/C-Band/200*/*.nc\",\n",
                 "    engine=\"h5netcdf\",\n",
                 "    parallel=True,\n",
                 "    chunks={\"time\": 15},\n",
                 ")\n",
+                "\n",
                 "daily_to_multiyear_monthly(c_band, \"c_band\", \"C_2002-2004\", \"./data/vodca\")"
             ]
         },
@@ -481,6 +503,328 @@
                 "    chunks={\"time\": 15},\n",
                 ")\n",
                 "daily_to_multiyear_monthly(x_band, \"x_band\", \"X_2000-2004\", \"./data/vodca\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "461ccdbf",
+            "metadata": {},
+            "source": [
+                "Upsample all to 30 second resolution"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "c9e548f7",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import xarray as xr\n",
+                "\n",
+                "# test.close()\n",
+                "test = xr.open_mfdataset(\"data/vodca/0.25_deg/*.nc\")\n",
+                "# test = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
+                "# test = xr.open_mfdataset(\"data/modis/0.01_deg/*.nc\")\n",
+                "# test = xr.open_dataset(\"data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.nc\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "7f3f89af",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vodca = Dataset(\n",
+                "    res=0.25,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    collection_name=CollectionName.VODCA,\n",
+                ")\n",
+                "\n",
+                "# Uncomment to resample the VODCA dataset to another resolution\n",
+                "resample_dataset(\n",
+                "    dataset=vodca,\n",
+                "    resolution=0.01,\n",
+                "    unit=Unit.DEGREE,\n",
+                "    format=\"netCDF\",\n",
+                "    mf=False,\n",
+                "    chunks={\"month\": 1},\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "b6741294",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import xarray as xr\n",
+                "import rioxarray as riox\n",
+                "\n",
+                "# test = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
+                "# test = xr.open_dataset(\"data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.nc\")\n",
+                "test = riox.open_rasterio(\"data/modis/1_km/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_1_km.tif\", masked=True)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "0cdb67e7",
+            "metadata": {},
+            "source": [
+                "## Split all predictor datasets into single GeoTIFFs for ease of processing"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "b2c236e4",
+            "metadata": {},
+            "source": [
+                "1. Make single-band directory in source data directory (original resolution)\n",
+                "2. Split each band and save to single-band directory with:\n",
+                "    - Appropriate datatype\n",
+                "    - NaN as nodata value\n",
+                "    - GeoTIFF\n",
+                "    - other creationOptions\n",
+                "        - tiled=True\n",
+                "        - blockxsize = 256\n",
+                "        - blockysize = 256\n",
+                "        - Compress = ZSTD\n",
+                "        - predictor=2\n",
+                "        - num_threads = 15\n",
+                "3. Reproject each file to 0.01 degree resolution and save\n",
+                "4. Clip each file with landmask and save\n",
+                "5. Tile all files into 5x5 degree blocks and save"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "96a5213c",
+            "metadata": {},
+            "source": [
+                "### MODIS"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "9797457d",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from pathlib import Path\n",
+                "import xarray as xr\n",
+                "import rioxarray as riox"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "57c4f42f",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "fn = Path(\"data/modis/1_km/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_1_km.tif\")\n",
+                "ds = riox.open_rasterio(fn, masked=True)\n",
+                "ds"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "99e397a9",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "ds[0].rio.to_raster(\"data/modis/\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "23df7c62",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "fns = Path(\"data/modis/1_km\").glob(\"*.tif\")\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "720893b3",
+            "metadata": {},
+            "source": [
+                "### ISRIC Soil"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "77c9be7b",
+            "metadata": {},
+            "source": [
+                "### WorldClim Bio"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "db72bff3",
+            "metadata": {},
+            "source": [
+                "### VODCA"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "7bd20370",
+            "metadata": {},
+            "source": [
+                "# Sanity check for 0.01 degree downsampling"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "86c54d85",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import xarray as xr\n",
+                "import rioxarray as riox"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "11ce5b14",
+            "metadata": {},
+            "source": [
+                "MODIS"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "2a661c3c",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "modis = xr.open_dataset(\"./data/modis/0.01_deg/2000-2004_sur_refl_b01-b05_multiyear_mean_m10_0.01_deg.tif\")\n",
+                "modis = modis[\"band_data\"][0]\n",
+                "modis.rio.resolution()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "ddb6b860",
+            "metadata": {},
+            "source": [
+                "VODCA (0.01 deg)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "99c5b64a",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vod_samp = xr.open_dataset(\"data/vodca/0.01_deg/C_2002-2004_multiyear_monthly_0.01_deg.nc\")\n",
+                "vod_samp = vod_samp[\"c_band\"][0]\n",
+                "# vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
+                "# # Define the x/y extent of North America\n",
+                "# xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
+                "# vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
+                "# vod_samp.plot()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "5cb835b9",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vod_samp.rio.resolution()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "e4746d2e",
+            "metadata": {},
+            "source": [
+                "VODCA (1 km)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "0c8a8bf3",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vod_samp = xr.open_dataset(\"data/vodca/1_km/C_2002-2004_multiyear_monthly_1_km.nc\")\n",
+                "vod_samp = vod_samp[\"Band1\"]\n",
+                "vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
+                "# Define the x/y extent of North America\n",
+                "xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
+                "vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
+                "vod_samp.plot()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "2afc5000",
+            "metadata": {},
+            "source": [
+                "VODCA (0.25 deg)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "94b04126",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "vod_samp = xr.open_dataset(\"data/vodca/0.25_deg/C_2002-2004_multiyear_monthly_0.25_deg.nc\")\n",
+                "vod_samp = vod_samp[\"c_band\"][0]\n",
+                "vod_samp = vod_samp.rio.write_crs(\"epsg:4326\")\n",
+                "xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
+                "vod_samp = vod_samp.rio.clip_box(xmin, ymin, xmax, ymax)\n",
+                "vod_samp.plot()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "03da75fd",
+            "metadata": {},
+            "source": [
+                "VODCA (orig)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "1e53ef37",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from pathlib import Path\n",
+                "import cartopy.crs as ccrs\n",
+                "import matplotlib.pyplot as plt\n",
+                "fns = Path(\"data/vodca/source/Ku-band/\").glob(\"**/*.nc\")\n",
+                "# plot north america for first 10 files\n",
+                "fig, ax = plt.subplots(5, 2, subplot_kw={\"projection\": ccrs.PlateCarree()})\n",
+                "ax = ax.flatten()\n",
+                "for i, fn in enumerate(fns):\n",
+                "    if i >= 10:\n",
+                "        break\n",
+                "    vod_src = xr.open_dataset(fn)\n",
+                "    vod_src = vod_src[\"vod\"][0]\n",
+                "    vod_src = vod_src.rio.write_crs(\"epsg:4326\")\n",
+                "    xmin, ymin, xmax, ymax = (-168.0, 5.0, -52.0, 83.0)\n",
+                "    vod_src = vod_src.rio.clip_box(xmin, ymin, xmax, ymax)\n",
+                "    vod_src.plot(ax=ax[i])"
             ]
         }
     ],
